# opentelemetry-cpp-contrib

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md
exporters/: CMakeLists.txt  README.md
exporters/fluentd/: CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
exporters/fluentd/cmake/: nlohmann-json.cmake  opentelemetry-cpp-fluentd-config.cmake.in  opentelemetry-cpp.cmake
exporters/fluentd/example/: CMakeLists.txt  main.cc
exporters/fluentd/example/fluentd-docker/: Dockerfile  entrypoint.sh  fluent.conf  run.sh
exporters/fluentd/example/foo_library/: foo_library.cc
exporters/fluentd/example/log/: main.cc
exporters/fluentd/example/trace/: main.cc
exporters/fluentd/src/: fluentd_exporter.cc  recordable.cc
exporters/fluentd/src/log/: fluentd_exporter.cc  fluents_exporter.cc  recordable.cc
exporters/fluentd/src/trace/: fluentd_exporter.cc  recordable.cc
exporters/fluentd/test/: fluentd_baseline_test.cc  fluentd_recordable_test.cc
exporters/fluentd/test/common/: msgpack_timestamp.h  socket_server.h
exporters/fluentd/test/log/: fluentd_recordable_test.cc
exporters/fluentd/test/trace/: fluentd_baseline_test.cc  fluentd_recordable_test.cc
exporters/geneva/: CMakeLists.txt  INSTALL.md
exporters/geneva-metrics/: CMakeLists.txt
exporters/geneva-metrics/build_tools/: 0001-geneva-exporter.patch
exporters/geneva-metrics/test/common/: socket_server.h
exporters/geneva-trace/: CMakeLists.txt
exporters/geneva-trace/example/: CMakeLists.txt  main.cc
exporters/geneva-trace/tools/: build-nuget.cmd  build-nuget.ps1
exporters/geneva-trace/tools/nuget/: OpenTelemetry.Cpp.Geneva.nuspec  README.md
exporters/geneva/build_tools/: build_geneva_metrics_exporter.sh
exporters/geneva/cmake/: ParseOsRelease.cmake  package.cmake
exporters/geneva/example/: example_metrics.cc  foo_library.cc  foo_library.h  stress_test_linux.cc
exporters/geneva/src/: data_buffer.cc  etw_data_transport.cc  exporter.cc  growing_buffer.cc  serializer.cc  socket_data_transport.cc  unix_domain_socket_data_transport.cc
exporters/geneva/test/: metrics_exporter_test.cc
exporters/geneva/test/common/: generate_metrics.h  socket_server.h
exporters/geneva/test/decoder/: ifx_metrics_bin.cpp  ifx_metrics_bin.h  ifx_metrics_bin.ksy
exporters/prometheus/: .bazelrc  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  opentelemetry-cpp-contrib-config.cmake.in  repository.bzl
exporters/prometheus/src/: push_exporter.cc
exporters/prometheus/test/: CMakeLists.txt  prometheus_test_helper.h  push_exporter_test.cc
exporters/statsd/: CMakeLists.txt  README.md
exporters/statsd/cmake/: opentelemetry-cpp-statsd-config.cmake.in  opentelemetry-cpp.cmake
exporters/statsd/src/: etw_data_transport.cc  exporter.cc  socket_data_transport.cc
exporters/statsd/test/common/: socket_server.h
exporters/user_events/: CMakeLists.txt
exporters/user_events/Docker/: Dockerfile
exporters/user_events/benchmark/: logger_benchmark.cc
exporters/user_events/example/: foo_library.cc  main.cc
exporters/user_events/example/logs/: foo_library.cc  foo_library.h  main.cc
exporters/user_events/example/metrics/: foo_library.cc  main.cc
exporters/user_events/src/: logs_exporter.cc  metrics_exporter.cc  recordable.cc  utils.cc
exporters/user_events/test/: logs_exporter_test.cc
exporters/userevents/: CMakeLists.txt
exporters/userevents/test/: logs_exporter_test.cc
instrumentation/boost_log/: CMakeLists.txt  README.md
instrumentation/boost_log/example/: main.cc
instrumentation/boost_log/src/: sink.cc
instrumentation/boost_log/test/: sink_test.cc
instrumentation/httpd/: .clang-format  BUILD  CMakeLists.txt  Dockerfile  Dockerfile.cmake  Makefile  README.md  WORKSPACE  build.sh  create-otel-load.sh  httpd_install_otel.sh  opentelemetry.conf  setup-buildtools.sh  setup-cmake.sh  setup_environment.sh
instrumentation/httpd/.github/workflows/: ci.yml
instrumentation/httpd/src/otel/: BUILD  mod_otel.cpp  opentelemetry.cpp  opentelemetry.h
instrumentation/httpd/tests/: 00-apache-configtest.sh  01-create-root-span.sh  02-accept-inbound-trace.sh  03-accept-inbound-b3.sh  04-accept-inbound-b3-multi.sh  05-check-batch-spans.sh  06-check-batch-spans-x1000.sh  07-create-outbound-spans.sh  08-create-outbound-spans-b3.sh  09-check-environment-vars.sh  run-all.sh  setup-tools.sh  tools.sh
instrumentation/httpd/tools/: check-formatting.sh  format-bazel.sh  format-code.sh  setup-tools.sh
instrumentation/log4cxx/: CMakeLists.txt  README.md  opentelemetry_log4cxx_appender-config.cmake.in
instrumentation/log4cxx/example/: main.cc  otel-appender.xml
instrumentation/log4cxx/src/: appender.cc
instrumentation/log4cxx/test/: appender_test.cc
instrumentation/nginx/: CMakeLists.txt  README.md  config  nginx.cmake
instrumentation/nginx/.github/workflows/: ci.yml
instrumentation/nginx/ci/: build_module.sh  grpc.sh  otel-cpp.sh  setup_ci_environment.sh  setup_environment.sh  setup_test_environment.sh
instrumentation/nginx/src/: agent_config.cpp  agent_config.h  location_config.h  nginx_config.cpp  nginx_config.h  nginx_utils.h  otel_ngx_module.cpp  otel_ngx_module_modules.c  post_batch_span_processor.cpp  post_batch_span_processor.h  post_span_processor.cpp  post_span_processor.h  propagate.cpp  propagate.h  proxy_recordable.h  script.cpp  script.h  trace_context.cpp  trace_context.h
instrumentation/nginx/test/: Dockerfile  Dockerfile.mainline  Dockerfile.stable  Dockerfile_alpine  Dockerfile_amazonlinux  docker-compose.yml
instrumentation/nginx/test/conf/: nginx.conf  (+3 more)
instrumentation/process_metrics/: CMakeLists.txt
instrumentation/process_metrics/example/: metrics_example.cc
instrumentation/process_metrics/include/: process_metrics_factory.h  test_lib.h
instrumentation/process_metrics/src/: test_lib.cc
instrumentation/spdlog/: CMakeLists.txt  README.md  opentelemetry_spdlog_sink-config.cmake.in
instrumentation/spdlog/example/: main.cc
instrumentation/spdlog/src/: sink.cc
instrumentation/spdlog/test/: sink_test.cc
(+288 files in other folders)
