# Copyright The OpenTelemetry Authors
# SPDX-License-Identifier: Apache-2.0

module(
    name = "opentelemetry-cpp-contrib-prometheus",
    version = "1.19.0",
    compatibility_level = 0,
    repo_name = "io_opentelemetry_cpp_contrib",
)

bazel_dep(name = "abseil-cpp", version = "20240116.1", repo_name = "com_google_absl")
bazel_dep(name = "opentelemetry-cpp", version = "1.19.0", repo_name = "io_opentelemetry_cpp")
bazel_dep(name = "prometheus-cpp", version = "1.3.0", repo_name = "com_github_jupp0r_prometheus_cpp")

bazel_dep(name = "googletest", version = "1.14.0.bcr.1", dev_dependency = True, repo_name = "com_google_googletest")
